--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zodaic_sign",
+  "homepage": "https://yumenome.github.io/Zodiac/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
